fix: wrong padding

--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 4%;
+    padding-top: 4%;
 
     .__introduction {
         max-width: 40%;
